--- a/map-app/Dockerfile
+++ b/map-app/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install
 
-COPY . .
+COPY . ./
 RUN npm run build
 
 FROM nginx:alpine
@@ -14,4 +14,5 @@ COPY --from=build /app/build /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
+
 CMD ["nginx", "-g", "daemon off;"]
